<resources>
    <string name="app_name">Mars Jaket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_profile">MY PROFILE</string>
    <string name="menu_orders">PESANAN</string>
    <string name="menu_logout">LOGOUT</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_tos">Saya telah menyetujui ketentuan yang telah saya isi diatas.</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_content">Content</string>

    <string name="action_back">Back</string>
    <string name="action_order">Pesan</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up">Belum punya akun? Klik disini</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_reset">Reset</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_sign_up_short">Register</string>

    <string name="welcome">Welcome !</string>

    <string name="success">Successfully !</string>
    <string name="error">Whoops, something went wrong !</string>

    <string name="check_email_verify">Check your email to verify your account !</string>
    <string name="check_email_reset">Successfully sent, check your email !</string>
</resources>